tests/valid/lifetime/hrt_parse_fn_type.facet
fn accept(f: unrestricted for<'a> fn(unrestricted &'a unrestricted isize) -> unrestricted &'a unrestricted isize) -> unrestricted () {
    ()
}
