tests/invalid/lifetime/hrt_bound_unknown_lifetime.facet
fn bad(f: unrestricted for<'a> fn() -> unrestricted () where 'a: 'missing) -> unrestricted () {
    ()
}
